# cpp_sample

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
include/: crypto.h  interface_crypto.h
src/: CMakeLists.txt  crypto.cc
test/: CMakeLists.txt
